# EventHub-PythonPlayWright

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: test_execution.md  test_scenarios.md
scripts/: build_flakiness_dashboard.py
src/eventhub_automation/: __init__.py  accessibility.py  visual.py
src/eventhub_automation/api/: __init__.py  assertions.py  eventhub_client.py  models.py
src/eventhub_automation/components/: __init__.py  confirm_dialog.py  navigation_bar.py
src/eventhub_automation/core/: __init__.py  base_page.py  config.py  environments.py  logger.py  suites.py
src/eventhub_automation/data/: __init__.py  factories.py  lifecycle.py  users.py
src/eventhub_automation/flows/: __init__.py  admin_event_flow.py  auth_flow.py  booking_flow.py
src/eventhub_automation/pages/: __init__.py  admin_bookings_page.py  admin_events_page.py  bookings_page.py  event_detail_page.py  events_page.py  home_page.py  login_page.py  register_page.py
src/eventhub_automation/reporting/: __init__.py  flakiness.py
tests/api/: test_api_contracts.py  test_api_lifecycle.py  test_api_security.py  test_api_smoke.py
tests/ui/: test_home.py
tests/ui/accessibility/: test_accessibility_smoke.py
tests/ui/admin/: test_admin_pages.py
tests/ui/auth/: test_login.py
tests/ui/e2e/: test_admin_event_lifecycle.py  test_api_ui_integration.py  test_booking_lifecycle.py
tests/ui/events/: test_event_discovery.py
tests/ui/visual/: test_visual_smoke.py
