[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventhub-pytest-framework"
version = "0.1.0"
description = "Python Pytest Playwright automation framework for EventHub"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45.0",
    "pytest>=8.2.0",
    "pytest-playwright>=0.5.0",
    "pytest-html>=4.1.0",
    "pytest-xdist>=3.6.0",
    "pytest-rerunfailures>=14.0",
    "allure-pytest>=2.13.5",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --html=reports/report.html --self-contained-html --junitxml=reports/junit.xml --alluredir=reports/allure-results"
testpaths = ["tests"]
pythonpath = ["src"]
log_file = "reports/test-run.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = false
log_cli_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: critical user journeys",
    "regression: broader regression coverage",
    "auth: authentication tests",
    "events: event discovery and detail tests",
    "booking: booking workflow tests",
    "admin: admin event management tests",
    "api: API tests",
    "e2e: end-to-end user journeys",
    "flaky: test has a documented intermittent failure mode and limited retry allowance",
    "quarantine: temporarily excluded from default runs until fixed",
    "backend_gap: executable documentation of a known backend behavior gap",
    "serial: test intentionally requires exclusive shared state and should not be included in parallel runs",
]
